Added logo using css
Note: it has an issue where links are white/invisible.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar__contain">
-            <a href="#home" id="navbar__log">COLOR</a>
+            <a href="#home" id="navbar__logo">COLOR</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -25,6 +25,9 @@
                 </li>
                 <li class="navbar__item">
                     <a href="#services" class="navbar__links" id="services-page">Services</a>
+                </li>
+                <li class="navbar__btn">
+                    <a href="#sign-up" class="Button" id="signup">Sign Up</a>
                 </li>
             </ul>
         </div>
