--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="navbar__contain">
+        <div class="navbar__container">
             <a href="#home" id="navbar__logo">COLOR</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
-            <ul class="navber__menu">
+            <ul class="navbar__menu">
                 <li class="navbar__item">
                     <a href="#home" class="navbar__links" id="home-page">Home</a>
                 </li>
@@ -27,7 +27,7 @@
                     <a href="#services" class="navbar__links" id="services-page">Services</a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="#sign-up" class="Button" id="signup">Sign Up</a>
+                    <a href="#sign-up" class="button" id="signup">Sign Up</a>
                 </li>
             </ul>
         </div>
